<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_add_business"
            android:title="@string/menu_add_business" />

        <item
            android:id="@+id/nav_offers"
            android:title="@string/menu_offers" />
    </group>

    <item android:title="@string/menu_account" android:id="@+id/account" android:checkable="true">
        <menu>
            <item
                android:id="@+id/nav_signin"
                android:title="@string/menu_signin" />
            <item
                android:id="@+id/nav_favourites"
                android:title="@string/menu_favourites" />

            <item
                android:id="@+id/nav_signout"
                android:title="@string/menu_signout"
                />
        </menu>
    </item>

</menu>
